--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,7 @@
             </a>
             <a class="navbar-brand" href="#">FrontPage HackerNews!</a>
         </div>
+            <p class="navbar-text navbar-right"><em>Last update: {{timestamp}}</em></p>
       </div>
     </nav>
     <ul class="list-group">
