--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,9 @@
 {% extends 'bootstrap3/bootstrap3.html' %}
 {% load bootstrap3 %}
 {% load staticfiles %}
+
 {% block bootstrap3_title %}
-    Hacker News Front Page
+    HackerNews FrontPage!
 {% endblock %}
 
 {% block bootstrap3_content %}
