--- a/templates/main.html
+++ b/templates/main.html
@@ -12,9 +12,9 @@
       <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img alt="FrontPage HackerNews" src="{% static 'img/logo.png' %}">
+                <img alt="Hacker News Daily" src="{% static 'img/logo.png' %}">
             </a>
-            <a class="navbar-brand" href="#">FrontPage HackerNews!</a>
+            <a class="navbar-brand" href="#">Hacker News Daily</a>
         </div>
             <p class="navbar-text navbar-right"><em>Last update: {{timestamp}}</em></p>
       </div>
