more changes because of the new app name

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block bootstrap3_title %}
-    HackerNews FrontPage!
+    Hacker News Daily
 {% endblock %}
 
 {% block bootstrap3_content %}
